--- a/dotfiles/latte-dock/Default.layout.latte
+++ b/dotfiles/latte-dock/Default.layout.latte
@@ -519,7 +519,7 @@ customBackground=
 customTextColor=
 disableBordersForMaximizedWindows=false
 icon=
-lastUsedActivity=ff452ce5-56e8-4bf4-b2a3-da99cc04e78e
+lastUsedActivity=
 launchers=
 popUpMargin=-1
 preferredForShortcutsTouched=false
