Modify webpack setup scripts

--- a/scripts/webpack/setup/normal/file-structure/src/style/reset.css
+++ b/scripts/webpack/setup/normal/file-structure/src/style/reset.css
@@ -4,10 +4,20 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    display: grid;
+}
+
 button {
     background-color: inherit;
     color: inherit;
     border: none;
+    cursor: pointer
 }
 
 li {
@@ -27,5 +37,3 @@ input {
     background-color: inherit;
     height: 35px;
 }
-
-
