Move custom vim functions into separate files

--- a/scripts/express/template/src/views/homepage.ejs
+++ b/scripts/express/template/src/views/homepage.ejs
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <div class="box">
+        <p class="innertext">Hello world</p>
+    </div>
 
     <script src="<%= scriptPath %>"></script>
 </body>
